--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+  "AzureServiceBusSettings": {
+    "Host": "sb://trnasbqa.servicebus.windows.net",
+    "ConnectionString": "Endpoint=sb://trnasbqa.servicebus.windows.net/;SharedAccessKeyName=TestKey;SharedAccessKey=KMBi6xFQs5HI/jDq2RsMHYfTtWFOYqYJ++ASbE+XK8Y=;TransportType=AmqpWebSockets"
+  },
+  "AzureServiceBusSettingsManagedIdentity": {
+    "Host": "sb://trnasbqa.servicebus.windows.net",
+    "ConnectionString": "Endpoint=sb://trnasbqa.servicebus.windows.net/;Authentication=Managed Identity;TransportType=AmqpWebSockets"
+  }
 }
